gccida/g3/print_reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_reg/src/i386.c:6180:16: error: use of undeclared identifier 'off_6C61E2'
fprintf( file, off_6C61E2, v9); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/print_reg/src/obj/i386.o] Error 1
